Fix input icon alignment

--- a/src/input.scss
+++ b/src/input.scss
@@ -101,14 +101,14 @@
 
     &.a-input__prefix {
       .a-input__icon--prefix {
-        top: .75rem;
+        top: .6rem;
         left: .65rem;
       }
     }
 
     &.a-input__suffix {
       .a-input__icon--suffix {
-        top: .75rem;
+        top: .6rem;
         right: .65rem;
       }
     }
